/*
 * Copyright (C) 2017 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
package com.dremio.service.accelerator.proto;

import "../../../../../services/jobs/src/main/protobuf/job.proto";
import "../../../../../services/namespace/src/main/protobuf/dataset.proto";

option java_package = "com.dremio.service.accelerator.proto";
option optimize_for = SPEED;

option java_outer_classname = "AccelerationCommonProtobuf";

// NOTE that these messages are used both by DAC and backend. Any change made directly implies a change in client protocol.

// describes whether this acceleration is system or user generated
enum AccelerationMode {
  AUTO = 1;
  MANUAL = 2;
}

// describes state machine for an acceleration instance
enum AccelerationState {
  // new admin created acceleration. pipeline is not complete.
  NEW_ADMIN = 1;
  // new user created acceleration. pipeline is not complete.
  NEW_USER = 2;
  // new system created acceleration. pipeline is not complete.
  NEW_SYSTEM = 3;
  // acceleration is requested. pipeline is complete.
  REQUESTED = 4;
  // acceleration is enabled by admin. pipeline is complete.
  ENABLED = 5;
  // acceleration is disabled by admin. pipeline is complete.
  DISABLED = 6;
  // an error occured during processing acceleration
  ERROR = 7;
  // acceleration is enabled by system. pipeline is complete.
  ENABLED_SYSTEM = 8;
}

enum MaterializationState {
    NEW = 1;
    RUNNING = 2;
    DONE = 3;
    FAILED = 4;
    DELETED = 5;
}

// state to see if layout failed as part of materializations
enum MaterializedLayoutState {
    ACTIVE = 1;
    FAILED = 2;
}

// unique id
message AccelerationId {
  required string id = 1;
}

// type of acceleration
enum AccelerationType {
  DATASET = 1;
  JOB = 2;
}

// unique layout id
message LayoutId {
  required string id = 1;
}

// defines type of layout. ROLLUP for aggregation layouts, RAW otherwise
enum LayoutType {
  RAW = 1;
  AGGREGATION = 2;
}

message RowType {
  // row type of the materialization
  repeated com.dremio.service.namespace.dataset.proto.ViewFieldType field = 1;
}

enum FieldSortOrder {
  ASC = 1;
  DESC = 2;
}

enum DimensionGranularity {
  DATE = 1;
  NORMAL = 2;
}

// distribution strategy for data within a partition
enum PartitionDistributionStrategy {
  CONSOLIDATED = 1;
  STRIPED = 2;
}
